NO VALE MIRAR ACA, TRAMPOSA DE MIERDA

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         .texto {
             text-align: center;
             font-size: 48px;
+            line-height: 1.2; /* Ajusta el valor para cambiar el espacio entre las filas */
+        }
+
+        .texto span {
+            color: transparent; /* Hace el texto transparente */
         }
     </style>
 </head>
@@ -21,6 +26,7 @@
     <div class="texto">
         <p>Entre</p>
         <p>El norte</p>
+        <span>Bucanero</span>
         <p>y el sur</p>
         <p>Se esconde</p>
         <p>La clave</p>
