NO VALE MIRAR ACA, TRAMPOSA DE MIERDA

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <body>
     <div class="texto">
         <p>Entre</p>
-        <p>El norte</p>
+        <p style="margin-bottom: 0;">El norte</p>
         <span>Bucanero</span>
-        <p>y el sur</p>
+        <p style="margin-top: 0;">y el sur</p>
         <p>Se esconde</p>
         <p>La clave</p>
     </div>
