--- a/index.html
+++ b/index.html
@@ -1,35 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Texto Centrado</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .texto {
-            text-align: center;
-            font-size: 48px;
-            line-height: 1.2; /* Ajusta el valor para cambiar el espacio entre las filas */
-        }
-
-        .texto span {
-            color: transparent; /* Hace el texto transparente */
-        }
-    </style>
+    <meta charset="UTF-8">
+    <title>Mensaje Pirata</title>
 </head>
-<body>
-    <div class="texto">
-        <p>Entre</p>
-        <p style="margin-bottom: 0;">El norte</p>
-        <span>Bucanero</span>
-        <p style="margin-top: 0;">y el sur</p>
-        <p>Se esconde</p>
-        <p>La clave</p>
-    </div>
+<body style="font-family: 'Arial', sans-serif; background-color: #f7f7f7; color: #333; text-align: center; padding: 20px;">
+    <h1 style="color: #000; font-size: 24px;">Arrr, parece que una nueva pista se ha revelado, pero deberás desencriptarla, porque te falta la clave para abrir el cofre del conocimiento.</h1>
+    <p style="font-size: 18px;">La clave está escondida acá: 🗝️ <a href="https://docs.google.com/document/d/1YX9Sk_N4D59ITn5ggP3e-AsFMUxY2C-DFNp_kw6chmA/edit" target="_blank">https://docs.google.com/document/d/1YX9Sk_N4D59ITn5ggP3e-AsFMUxY2C-DFNp_kw6chmA/edit</a></p>
+    <p style="font-size: 18px;">Una vez que tengas la clave, podrás descifrar el texto y descubrir los secretos que aguardan en las profundidades de la sabiduría.</p>
+    <p style="font-size: 16px;">🏴‍☠️🗺️💻</p>
+    <p style="font-size: 16px;">
+        <a href="https://docs.google.com/document/d/1YX9Sk_N4D59ITn5ggP3e-AsFMUxY2C-DFNp_kw6chmA/edit" target="_blank" style="color: #000; text-decoration: none; background-color: #f5f5f5; padding: 10px 20px; border-radius: 5px;">¡Aquí empieza la aventura!</a>
+    </p>
+    <p style="font-size: 16px;">🏴‍☠️🗺️💻</p>
 </body>
 </html>
